--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "waylaidwanderer/php-steamcommunity",
+    "name": "bogdanaslt/php-steamcommunity",
     "description": "A PHP library for interacting with the Steam Community website (steamcommunity.com)",
     "require": {
         "phpseclib/phpseclib": "^2.0"
@@ -9,14 +9,14 @@
     },
     "autoload": {
         "psr-4": {
-            "waylaidwanderer\\SteamCommunity\\": ""
+            "bogdanaslt\\SteamCommunity\\": ""
         }
     },
     "license": "MIT",
     "authors": [
         {
-            "name": "Joel",
-            "email": "waylaidwanderer@live.com"
+            "name": "Bogdan Kustan",
+            "email": "b.kustan@gmail.com"
         }
     ]
 }
